Set up travis-ci for Continuous Deployment
When a pull request is merged after passing tests on travis-ci, then it
will automatically push the new application for deployment on Heroku.

Signed-off-by: mattjmcnaughton <mattjmcnaughton@gmail.com>

--- a/text_support/templates/index.html
+++ b/text_support/templates/index.html
@@ -9,5 +9,6 @@ example](https://github.com/pallets/flask/tree/master/examples/flaskr/templates)
 {% extends "layout.html" %}
 
 {% block body %}
-<h1>Welcome to Text Support</h1>
+<h1>Welcome to Text Support!</h1>
+<p>We continuously deploy now.</p>
 {% endblock %}
