Update twilio number
Because we did not use our free trial number with twilio for over a
month, we had to upgrade to a new number. This commit adds the new
number.

Signed-off-by: mattjmcnaughton <mattjmcnaughton@gmail.com>

--- a/text_support/templates/index.html
+++ b/text_support/templates/index.html
@@ -9,7 +9,7 @@
           </span>
           <h1>Text Support</h1>
           <p>
-            Text <em>+1 814-826-4053</em> for assistance when supporting a friend <br>
+            Text <em>(814) 201-5234</em> for assistance when supporting a friend <br>
             or loved one through mental health struggles.
           </p>
         </header>
